--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,30 +1,26 @@
 {
-	"name": "Awesome Extension",
-	"version": "0.0.0",
-	"description": "An awesome new browser extension",
-	"homepage_url": "https://github.com/awesome-templates/browser-extension-template",
-	"manifest_version": 2,
-	"minimum_chrome_version": "74",
-	"applications": {
-		"gecko": {
-			"id": "awesome-extension@notlmn.github.io",
-			"strict_min_version": "67.0"
-		}
-	},
-	"icons": {
-		"128": "icon.png"
-	},
-	"permissions": [
-		"storage"
-	],
-	"options_ui": {
-		"chrome_style": true,
-		"page": "options.html"
-	},
-	"background": {
-		"persistent": false,
-		"scripts": [
-			"background.js"
-		]
-	}
+    "description": "Screenshots webpages and sends them to webnative for storage",
+    "manifest_version": 2,
+    "name": "pachy",
+    "version": "0.0.1",
+    "icons": {
+        "32": "icons/fission-32.png"
+    },
+    "background": {
+        "scripts": ["background.js"]
+    },
+    "content_scripts": [
+        {
+            "matches": ["https://stupid-enormous-square-hero.fission.app/"],
+            "js": ["proxy.js"]
+        }
+    ],
+    "browser_action": {
+        "default_icon": "icons/fission-32.png"
+    },
+    "permissions": [
+        "<all_urls>",
+        "tabs",
+        "https://stupid-enormous-square-hero.fission.app/"
+      ]
 }
