saved page data now queueing to localforage

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -7,7 +7,7 @@
     "32": "icons/fission-32.png"
   },
   "background": {
-    "scripts": ["background.js"]
+    "page": "background.html"
   },
   "content_scripts": [
     {
