--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,7 +1,7 @@
 {
   "description": "Screenshots webpages and sends them to webnative for storage",
   "manifest_version": 2,
-  "name": "pachy",
+  "name": "Lil' Patchy",
   "version": "0.0.1",
   "icons": {
     "32": "icons/fission-32.png"
