--- a/source/manifest.json
+++ b/source/manifest.json
@@ -16,7 +16,8 @@
     }
   ],
   "browser_action": {
-    "default_icon": "icons/fission-32.png"
+    "default_icon": "icons/fission-32.png",
+    "default_popup": "pages/popup.html"
   },
   "permissions": [
     "<all_urls>",
