--- a/source/manifest.json
+++ b/source/manifest.json
@@ -7,14 +7,11 @@
     "32": "icons/fission-32.png"
   },
   "background": {
-    "page": "background.html"
+    "scripts": [ 
+      "lib/localforage.js",
+      "background.js" 
+    ]
   },
-  "content_scripts": [
-    {
-      "matches": ["https://stupid-enormous-square-hero.fission.app/"],
-      "js": ["proxy.js"]
-    }
-  ],
   "browser_action": {
     "default_icon": "icons/fission-32.png",
     "default_popup": "pages/popup.html"
